<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragment.BinaryConvertFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        >
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_your_binary_here"
            android:maxHeight="80dp"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:inputType="numberDecimal"
            app:met_floatingLabelText="@string/your_binary"
            app:met_floatingLabel="highlight"
            app:met_clearButton="true"
            />
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btnCopy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text=""
            fancy:fb_iconResource="@drawable/ic_content_copy_24dp"
            fancy:fb_defaultColor="#00ffffff" />

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btnPaste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text=""
            fancy:fb_iconResource="@drawable/ic_content_paste_24dp"
            fancy:fb_defaultColor="#00ffffff"
            />
        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btnMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="40dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text=""
            fancy:fb_iconResource="@drawable/ic_message_black_24dp"
            fancy:fb_defaultColor="#00ffffff"
            />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/layout_border"
        >

        <TextView
            android:id="@+id/txtResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/txtResult"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="20sp" />
    </ScrollView>


</LinearLayout>